--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SiddhantPandey</title>
+    <link
+      rel="icon"
+      type="images/x-icon"
+      href="../siddhant-portfolio//src/components/assets/favme.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
