--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SiddhantPandey</title>
-    <link
-      rel="icon"
-      type="images/x-icon"
-      href="../siddhant-portfolio/src/components/assets/favme.jpg"
-    />
+    <title id="page-title">SiddhantPandey</title>
+    <link rel="icon" href="./favme.jpg" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
