--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="page-title">SiddhantPandey</title>
-    <link rel="icon" href="./favme.jpg" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
